--- a/index.html
+++ b/index.html
@@ -21,27 +21,24 @@
     <h1>Introduction</h1>
     <p>
         The Little Man Stack Machine (LMSM) is a backwards-compatible extension of the venerable and excellent
-        <a href="https://en.wikipedia.org/wiki/Little_man_computer">Little Man Computer</a> (LMC) teaching computer model,
-        intended to give people a gentle introduction to how computers work at a low level.
-    </p>
-
-    <p>
-        Like the LMC, the LMSM models a simple <a href="https://en.wikipedia.org/wiki/Von_Neumann_architecture">Von
-        Neumann</a> computing machine and the execution cycle is identical to the LMC.
-    </p>
-
-    <p>
-        As the name suggests, the LMSM introduces the notion of a stack (two stacks, actually) in order to
-        demonstrate:
+        <a href="https://en.wikipedia.org/wiki/Little_man_computer">Little Man Computer</a> (LMC) teaching computer model.
+        It is designed to be a teaching aid, to show people how various aspects of computing work in an easy and approachable
+        manner:
     </p>
 
     <ul>
-        <li>How stack-machines work</li>
-        <li>How functions work</li>
+        <li>The operations of a basic Von-Neumann style computer</li>
+        <li>How assembly works</li>
+        <li>How function calls can be implemented using basic hardware</li>
+        <li>How recursion works</li>
+        <li>How stack-based languages works</li>
+        <li>How a high-level programming language can be compiled to assembly</li>
     </ul>
 
     <p>
-        At the system level, the LMSM makes the following changes to the LMC:
+        Like the LMC, the LMSM models a simple <a href="https://en.wikipedia.org/wiki/Von_Neumann_architecture">Von
+        Neumann</a> computing machine and the execution cycle is identical to the LMC.  In order to better support
+        more advanced computer topics, the LMSM makes the following changes to the LMC:
     </p>
 
     <ul>
@@ -70,7 +67,7 @@
             LMSM
         </li>
         <li>
-            Two virtual instructions are available to make assembly coding on the LMSM more pleasant.
+            Two "virtual" assembly instructions are available to make assembly coding on the LMSM more pleasant.
         </li>
     </ul>
 
