--- a/emulator.html
+++ b/emulator.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://the.missing.style/">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>The Little Man Stack Machine</title>
 </head>
 <body>
