--- a/firth.html
+++ b/firth.html
@@ -35,7 +35,7 @@
     <p>
         The programming language for the LSMS is called "Firth", a nod to the once-popular but largely forgotten
         programming language <a href="https://en.wikipedia.org/wiki/Forth_(programming_language)">Forth</a>. Like
-        Forth, Firth has a <a href="https://en.wikipedia.org/wiki/Reverse_Polish_notation">Revers Polish notation</a>
+        Forth, Firth has a <a href="https://en.wikipedia.org/wiki/Reverse_Polish_notation">Reverse Polish notation</a>
         syntax that may appear a little strange at first, but that grows on you.
     </p>
 
