--- a/assembly.html
+++ b/assembly.html
@@ -286,10 +286,10 @@
         developed, old code often continued to work on the new CPUs.
     </p>
 
-    <h2>The "Load Immediate" Instruction</h2>
+    <h2>The "Load Immediate" & "No Op" Instructions</h2>
 
     <p>
-        In addition to these standard LMC instructions, the LMSM also supports two new "standard" instructions:
+        In addition to the standard LMC instructions the LMSM also supports two new non-stack related instructions:
     </p>
 
     <ul>
@@ -297,7 +297,7 @@
             An "immediate" instruction to load a value directly into the accumulator (We saw this instruction in our simple "Hello World" program)
         </li>
         <li>
-            A "noop" instruction that makes code generation in the Firth compiler easier
+            A "noop" instruction, which makes code generation in the Firth compiler a bit easier to understand
         </li>
     </ul>
 
