remove `NOOP` operation in favor of `ADD ZERO`

--- a/assembly.html
+++ b/assembly.html
@@ -286,20 +286,12 @@
         developed, old code often continued to work on the new CPUs.
     </p>
 
-    <h2>The "Load Immediate" & "No Op" Instructions</h2>
+    <h2>The "Load Immediate" Instruction</h2>
 
     <p>
-        In addition to the standard LMC instructions the LMSM also supports two new non-stack related instructions:
+        In addition to these standard LMC instructions, the LMSM also supports an "immediate" instruction to load
+        a value directly into the accumulator. We saw this instruction in our simple "Hello World" program:
     </p>
-
-    <ul>
-        <li>
-            An "immediate" instruction to load a value directly into the accumulator (We saw this instruction in our simple "Hello World" program)
-        </li>
-        <li>
-            A "noop" instruction, which makes code generation in the Firth compiler a bit easier to understand
-        </li>
-    </ul>
 
     <table>
         <thead>
@@ -319,17 +311,6 @@
             </td>
             <td>
                 Loads the numeric value XX directly into the accumulator.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                900
-            </td>
-            <td>
-                NOOP
-            </td>
-            <td>
-                Does nothing
             </td>
         </tr>
         </tbody>
