--- a/lmsm-ui.html
+++ b/lmsm-ui.html
@@ -18,8 +18,30 @@
 </head>
 
 <body class="padding riobeachonsummer" x-init="
-    new AssemblyMode();
-    new FirthMode();
+    CodeMirror.defineSimpleMode('lmsm-assembly', {
+      start: [
+        {
+          regex: /(?:DAT|ADD|SUB|STA|LDI|LDA|BRA|BRZ|BRP|NOOP|INP|OUT|SPUSH|SPOP|SDUP|SDROP|SSWAP|SADD|SSUB|SMUL|SDIV|SMAX|SMIN|JAL|RET|HLT|dat|add|sub|sta|ldi|lda|bra|brz|brp|noop|inp|out|spush|spop|sdup|sdrop|sswap|sadd|ssub|smul|sdiv|smax|smin|jal|ret|hlt)\b/,
+          token: 'keyword'
+        },
+        {
+          regex: /\d\d/,
+          token: 'number',
+        },
+      ],
+    });
+    CodeMirror.defineSimpleMode('firth', {
+      start: [
+        {
+          regex: /(?:def|\.|get|end|dup)\b/,
+          token: 'keyword'
+        },
+        {
+          regex: /\d\d/,
+          token: 'number',
+        },
+      ]
+    });
     window.editor = new CodeMirror(document.querySelector('#codeEditor'), {
       lineNumbers: true,
       tabSize: 2,
@@ -27,14 +49,13 @@
     });
     window.editor.setSize('100%', '56em');
   " x-data="{
-  compiler: new FirthCompiler(),
   lmsm: new LittleManStackMachine(),
-  editor: undefined,
   mode: 'firth',
   setMode() {
-    window.editor.setOption('mode', this.mode)
+    window.editor.setOption('mode', this.mode);
+    window.editor.refresh();
   },
-  currentLineNumber: 0,
+  currentLineNumber: -1,
 }">
   <div class="grid">
     <div id="titleBox" class="box center" data-cols="1 3" data-rows="1">
@@ -52,14 +73,19 @@
       <section class="tool-bar" x-data="{
         compile() {
           this.lmsm = new LittleManStackMachine();
-          compiled = this.lmsm.compile(window.editor.getValue());
+          if(this.currentLineNumber !== -1) {
+            window.editor.getDoc().removeLineClass(this.currentLineNumber, 'background', 'markCode');
+          }
+          this.currentLineNumber = -1;
+          code = window.editor.getValue();
+          compiled = this.lmsm.compile(code);
           assembled = this.lmsm.assemble(compiled);
           this.lmsm.load(assembled);
         },
         assemble() {
           this.lmsm = new LittleManStackMachine();
           if(this.currentLineNumber !== -1) {
-            this.editor.getDoc().removeLineClass(this.currentLineNumber, 'background', 'markCode');
+            window.editor.getDoc().removeLineClass(this.currentLineNumber, 'background', 'markCode');
           }
           this.currentLineNumber = -1;
           code = window.editor.getValue();
@@ -85,7 +111,7 @@
                 assembleAndRun() {
                   this.lmsm = new LittleManStackMachine();
                   if(this.currentLineNumber !== -1) {
-                    this.editor.getDoc().removeLineClass(this.currentLineNumber, 'background', 'markCode');
+                    window.editor.getDoc().removeLineClass(this.currentLineNumber, 'background', 'markCode');
                   }
                   this.currentLineNumber = -1;
                   code = window.editor.getValue();
@@ -97,12 +123,12 @@
           <input type="button" x-data="{
                 step() {
                   if(this.currentLineNumber !== -1) {
-                    this.editor.getDoc()
+                    window.editor.getDoc()
                       .removeLineClass(this.currentLineNumber, 'background', 'markCode');
                     this.lmsm.step();
                   }
                   this.currentLineNumber++;
-                  this.editor.getDoc()
+                  window.editor.getDoc()
                     .addLineClass(this.currentLineNumber, 'background', 'markCode');
                   }
             }" @click="step()" value="Step" />
